# CISASAGReader

./: .gitignore  .pre-commit-config.yaml  .pylintrc.toml  2025-04-17-AMHERST-MEETING-Does the CRA affect my business_.docx  2025-0417-OWASP-AMHERST-EUCRA-OVERVIEW.pptx  CISASAGReader-1_0_2-SBOM.json  CISASAGReader-V1_0_2-VDR.json  CISASAGReader-V1_0_3-SBOM.json  CISASAGReader-V1_0_3-VDR.json  CISASAGReader-V1_0_4-SBOM.json  CISASAGReader-V1_0_4-SBOM.json.sig  CISASAGReader-V1_0_4-VDR.json  CISASAGReader-V1_0_4-VDR.json.sig  CISASAGReader-VDR.json  CISASAGReader-VRF-V1_0_2-VRF.json  CISASAGReader-VRF.json  CISASAGReader-VRF.json.sig  CISASAGReader-spreadsheet.xlsx  CISASAGReader.csv  CompanyData.html  CyberSecPolicy.html  FinancialData.html  LICENSE  README.md  ReadSAGspreadsheet.py  cisasagassess.bat  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
.dist-info/: CISASAGReader-V1_0_4-SBOM.json.sig
.github/: dependabot.yml
.github/workflows/: package.yml
sag_reader/: __init__.py  __main__.py
