[build-system]
requires = ["setuptools==75.6.0", "wheel==0.45.1", "setuptools-scm==8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sag-reader"
description = "Python app to read CISA Software Acquisition Guide Spreadsheets based on CISA format https://cisa.gov/sag"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = [
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "typer==0.15.1",
    "xlrd==2.0.1",
]

[project.scripts]
sag-reader = "sag_reader:main"

[project.optional-dependencies]
# If you have any optional dependencies, they would be listed here.

[tool.setuptools.packages.find]
include = ["*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"
