[metadata]
classifiers =
    License :: Other/Proprietary License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
description = Python app to read CISA Software Acquisition Guide Spreadsheets based on CISA format https://cisa.gov/sag
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
name = sag-reader
version = 1.0.1

[options]
python_requires = >=3.10
include_package_data = true
install_requires =
    openpyxl==3.1.5
    pandas==2.2.3
    typer==0.15.1
    xlrd==2.0.1
packages = find:

[options.entry_points]
console_scripts =
    sag-reader = sag_reader:main
